--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,11 @@
 #Make it colorful
-  set -g default-terminal "screen-256color"
-  set -g pane-border-bg colour240
-  set -g pane-border-fg colour240
-  set -g pane-active-border-bg colour244
-  set -g pane-active-border-fg colour244
-  set -g message-bg white
-  set -g message-fg colour166
-  set-window-option -g automatic-rename off 
+  set -g default-terminal "tmux-256color"
+  set -ga terminal-overrides ",*256col*:Tc"
+  set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+  set-environment -g COLORTERM "truecolor"
+
+  set-window-option -g automatic-rename off
+  set-option -g allow-rename off
   setw -g window-status-bell-style fg=white,bg=colour160
   set-window-option -g window-status-separator ''
   setw -g window-status-format "#[fg=colour244]#[bg=colour240]#[fg=colour254]#[bg=colour240] #W #[fg=colour240]#[bg=colour244]#[bg=colour240]"
@@ -15,7 +14,8 @@
   setw -g status-bg colour244
   setw -g status-left ""
   setw -g status-right ""
-  set status-interval 2
+
+  set -g focus-events on
 
 #Screen junkie loves CTRL-A
   unbind C-b
@@ -24,10 +24,12 @@
 
 #Rebinding things to match vim
 
+  bind c new-window -c ~
+
   #Splitting
   unbind %
-  bind v split-window -h
-  bind s split-window -v
+  bind v split-window -h -c "#{pane_current_path}"
+  bind s split-window -v -c "#{pane_current_path}"
 
   #Moving between panes
   bind h select-pane -L
@@ -48,6 +50,31 @@
   set -g renumber-windows on
 
 #ALT-Arrow moves windows
-  bind-key -n M-Left run-shell 'if tmux list-windows | head -n 1 | grep -q active ; then tmux move-window -t 999 \; move-window -r \; refresh-client -S ; else tmux swap-window -t -1 ; fi'
-  bind-key -n M-Right run-shell 'if tmux list-windows | tail -n 1 | grep -q active ; then tmux move-window -t 0 \; move-window -r \; refresh-client -S ; else tmux swap-window -t +1 ; fi'
+  bind Left  swap-window -t -1\; select-window -t -1
+  bind Right swap-window -t +1\; select-window -t +1
+
+#Mouse
+  setw -g mouse on
+
+#Copy and Paste
+  bind -T copy-mode-vi v send -X begin-selection
+  bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip"
+  bind P paste-buffer
+  bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip"
+
+# Automatic restore
+  set -g @continuum-restore 'on'
+
+# Solarized
+  set -g @colors-solarized 'dark'
+
+# List of plugins
+  set -g @plugin 'tmux-plugins/tpm'
+  set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tmux-resurrect'
+  set -g @plugin 'tmux-plugins/tmux-continuum'
+  set -g @plugin 'seebi/tmux-colors-solarized'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+  run '~/.config/tmux/plugins/tpm/tpm'
 
